manifests/backend/couchdb/state/30-db-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb
spec:
  selector:
    matchLabels:
      app: couch
  serviceName: couch-service
  replicas: 1
  template:
    metadata:
      labels:
        app: couch # pod label
    spec:
      containers:
      - name: couchdb
        image: couchdb:latest
        ports:
        - name: couchdb
          containerPort: 5984
        - name: epmd
          containerPort: 4369
        - containerPort: 9100
        volumeMounts:
          - name: couch-data-pvc
            mountPath: /opt/couchdb/data
          - name: couch-log-pvc
            mountPath: /opt/couchdb/logs
  volumeClaimTemplates:
  - metadata:
      name: couch-data-pvc
    spec:
      accessModes: 
        - ReadWriteOnce
      storageClassName: db-storage
      resources:
        requests:
          storage: 10Gi
      selector:
        matchLabels:
          volume: couch-data
  - metadata:
      name: couch-log-pvc
    spec:
      accessModes: 
        - ReadWriteOnce
      storageClassName: db-storage
      resources:
        requests:
          storage: 10Gi
      selector:
        matchLabels:
          volume: couch-logs
