manifests/backend/couchdb/state/40-db-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: couch-service
  namespace: default
  labels:
    app: couch
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 5984
    protocol: TCP
    targetPort: 5984
    name: couch-port-5984
  selector:
    app: couch         # label selector
---
kind: Service
apiVersion: v1
metadata:
  name: couch-nodep-svc 
  labels:
    app: couch
spec:
  type: NodePort            # NodePort service
  ports:
  - port: 5984
    nodePort: 30984         # external port
    protocol: TCP
    name:  couch-nodep
  selector:
    app: couch    # label selector
