manifests/backend/couchdb/state/50-db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ngrs
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: db.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: couch-nodep-svc
              port: 
                name: "couch-nodep"
